welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:8: error: '{' expected but 'case' found.
	case Color.green => return true
        ^SlugTracking:9: error: '}' expected but 'case' found.
	case _ => return false// Write your code here
        ^